# Esp32_wifi_ap_sta

./: .clang-format  .gitignore  README.md
.devcontainer/: Dockerfile
.github/workflows/: main.yaml
certs/: cacert.pem  prvtkey.pem
docs/: Doxyfile
main/: CMakeLists.txt  main.cpp  partitions.csv  sdkconfig
main/components/: CMakeLists.txt
main/components/http_server/: CMakeLists.txt  http_server.cpp  http_server.h
main/components/https_server/: CMakeLists.txt  https_server.cpp  https_server.h
main/components/ntp_server/: CMakeLists.txt  ntp_server.c  ntp_server.h
main/components/spiffs/: CMakeLists.txt  spiffs.cpp  spiffs.h
main/components/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
main/components/wifi_manager/: CMakeLists.txt  wifi_events.h  wifi_manager.cpp  wifi_manager.h  wifi_state_interface.h  wifi_state_machine_interface.h  wifi_states.cpp  wifi_states.h  wifi_transition.cpp  wifi_transition.h
scripts/: build.py  clean.py  flash.py  generate_doxygen.py  monitor.py  run_cpp_checker.py  run_unit_tests.py
tests/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/mocks/: CMakeLists.txt
tests/unit_tests/mocks/esp-idf/: CMakeLists.txt
tests/unit_tests/mocks/esp-idf/esp-tls/: CMakeLists.txt  esp_tls.h
tests/unit_tests/mocks/esp-idf/esp_common/: CMakeLists.txt  esp_err.h
tests/unit_tests/mocks/esp-idf/esp_event/: CMakeLists.txt  esp_event.h  esp_event_base.h  mock_esp_event.cpp  mock_esp_event.h
tests/unit_tests/mocks/esp-idf/esp_http_server/: CMakeLists.txt  esp_http_server.h  mock_esp_http_server.cpp  mock_esp_http_server.h
tests/unit_tests/mocks/esp-idf/esp_https_server/: CMakeLists.txt  esp_https_server.h  mock_esp_https_server.cpp  mock_esp_https_server.h
tests/unit_tests/mocks/esp-idf/esp_hw_support/: CMakeLists.txt  esp_interface.h  esp_mac.h  mock_esp_hw_support.cpp  mock_esp_hw_support.h
tests/unit_tests/mocks/esp-idf/esp_netif/: CMakeLists.txt  esp_netif.h  esp_netif_ip_addr.h  esp_netif_types.h  mock_esp_netif.cpp  mock_esp_netif.h
tests/unit_tests/mocks/esp-idf/esp_spiffs/: CMakeLists.txt  esp_spiffs.h  mock_esp_spiffs.cpp  mock_esp_spiffs.h
tests/unit_tests/mocks/esp-idf/esp_wifi/: CMakeLists.txt  esp_wifi.h  esp_wifi_default.h  esp_wifi_types.h  mock_esp_wifi.cpp  mock_esp_wifi.h  wifi_os_adapter.h
tests/unit_tests/mocks/esp-idf/freertos/: CMakeLists.txt  mock_freertos.cpp  mock_freertos.h
tests/unit_tests/mocks/esp-idf/freertos/freertos/: FreeRTOS.h  FreeRTOSConfig.h  event_groups.h  port_macro.h  projdefs.h  semphr.h  task.h
tests/unit_tests/mocks/esp-idf/log/: CMakeLists.txt  esp_log.h
tests/unit_tests/mocks/esp-idf/lwip/: CMakeLists.txt  esp_sntp.h  mock_lwip.cpp  mock_lwip.h
tests/unit_tests/mocks/http_server/: CMakeLists.txt  http_server.h  mock_http_server.cpp  mock_http_server.h
tests/unit_tests/mocks/https_server/: CMakeLists.txt  https_server.h  mock_https_server.cpp  mock_https_server.h
tests/unit_tests/mocks/singleton_template/: CMakeLists.txt  singleton_template.h
tests/unit_tests/mocks/spiffs/: CMakeLists.txt  mock_spiffs.cpp  mock_spiffs.h  spiffs.h
tests/unit_tests/mocks/stdio/: CMakeLists.txt  mock_stdio.cpp  mock_stdio.h  stdio_wrapper.h
tests/unit_tests/mocks/wifi/: CMakeLists.txt  mock_wifi.cpp  mock_wifi.h  wifi.h
tests/unit_tests/tests/: CMakeLists.txt
tests/unit_tests/tests/http_server/: CMakeLists.txt  ut_http_server.cpp
tests/unit_tests/tests/https_server/: CMakeLists.txt  ut_https_server.cpp
tests/unit_tests/tests/spiffs/: CMakeLists.txt  ut_spiffs.cpp
tests/unit_tests/tests/ut_example/: CMakeLists.txt  ut_example.cpp
tests/unit_tests/tests/wifi/: CMakeLists.txt  ut_wifi.cpp
