add_subdirectory(esp_common)
add_subdirectory(esp_event)
add_subdirectory(esp_http_server)
add_subdirectory(esp_https_server)
add_subdirectory(esp_hw_support)
add_subdirectory(esp_netif)
add_subdirectory(esp_spiffs)
add_subdirectory(esp_wifi)
add_subdirectory(esp-tls)
add_subdirectory(freertos)
add_subdirectory(log)
add_subdirectory(lwip)
